# office2llm

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PRD.md  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  install.sh  pyproject.toml
office2llm/: __init__.py
